TAG: loadadmin-6-0-23-4
DATE: 3/05/2024
STAFF: lec
CHANGES:
1) prod/updated file set up

TAG: loadadmin-6-0-23-3
DATE: 2/29/2024
STAFF: dbm
CHANGES:
1) prod/sundaytasks1.csh: added GXD High Throughput ArrayExpress load

TAG: loadadmin-6-0-23-2
DATE: 1/24/2024
STAFF: dbm
CHANGES:
1) prod/sundaytasks1.csh: added HPO Vocab Load
2) prod/sundaytasks2.csh: removed HPO Vocab Load

TAG: loadadmin-6-0-23-1
DATE: 1/9/2024
STAFF: dbm
CHANGES:
1) prod/dailytasks.csh: added curator loads that also run on Sunday
2) bin/startES, bin/stopES, bin/restartES: New

TAG: loadadmin-6-0-22-20
DATE: 11/30/2023
STAFF: dbm
CHANGES:
1) prod/sundaytasks1.csh: retire arrayexpload

TAG: loadadmin-6-0-22-19
DATE: 11/30/2023
STAFF: dbm
CHANGES:
1) prod/saturdaytasks.csh: changed to sundaytasks1.csh
2) prod/sundaytasks.csh: changed to sundaytasks2.csh
3) prod/dailytaskspython3.sh: changed to dailytasks_filesetup.sh
4) prod/saturdaytaskspython3.sh: changed to sundaytasks1_filesetup.sh
5) prod/sundaytaskspython3.sh: changed to sundaytasks2_filesetup.sh

TAG: loadadmin-6-0-22-18
DATE: 11/14/2023
STAFF: dbm
CHANGES:
1) prod/saturdaytasks.csh: retire genmapload

TAG: loadadmin-6-0-22-17
DATE: 10/24/2023
STAFF: dbm
CHANGES:
1) prod/removeLastrunFiles.sh: use ${DATALOADSOUTPUT} in each path

TAG: loadadmin-6-0-22-16
DATE: 10/19/2023
STAFF: dbm
CHANGES:
1) prod/saturdaytasks.csh: retire TAL
2) prod/saturdaytaskspython3.sh: retire TAL

TAG: loadadmin-6-0-22-15
DATE: 10/18/2023
STAFF: dbm
CHANGES:
1) prod/removeLastrunFiles.sh: New

TAG: loadadmin-6-0-22-14
DATE: 10/17/2023
STAFF: lec
CHANGES: fixed
saturdaytaskspython3.sh
sundaytaskspython3.sh

TAG: loadadmin-6-0-22-13
DATE: 10/2/2023
STAFF: dbm
CHANGES:
1) prod/sundaytasks.csh: Remove call to entrezgeneload/loadFiles.csh because it
                         was taking too long to run Sunday night. It will now
                         run from Jenkins during the day on Sunday.

TAG: loadadmin-6-0-22-12
DATE: 9/11/2023
STAFF: dbm
CHANGES: