@@ -1,3 +1,11 @@
+TAG: loadadmin-6-0-23-5
+DATE: 3/29/2024
+STAFF: lec
+CHANGES:
+wts2-1155/GOC taking over GOA mouse, GOA human, etc.
+new GO load script
+commented out until new GOC/snapshot is available
+
 TAG: loadadmin-6-0-23-4
 DATE: 3/05/2024
 STAFF: lec
